--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 ---
 layout: default
 ---
-<h1>Hello jekyll</h1>
-<p>This is the index page</p>
-<p>My post list:</p>
+<h1>欢迎来到我的个人博客</h1>
+<p>文章列表：</p>
 <ul>
    {% for post in site.posts %}
        <li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
