delete useless files

--- a/menu.html
+++ b/menu.html
@@ -7,8 +7,7 @@ layout: blog_layout
         {{ post.time  | date: "%Y/%m/%d" }}
         &nbsp;&nbsp;
         <a href="{{post.url}}">
-            <span class="glyphicon glyphicon-hand-right">  </span>
-            &nbsp;&nbsp; {{post.title}} &nbsp;&nbsp; 
+            <span>●&nbsp;&nbsp;{{post.title}} &nbsp;&nbsp;</span> 
         </a>
     </section>
 {% endfor %}
